# modelica-flight

./: .travis.yml  CMakeLists.txt  Flight.mo  LICENSE  README.md  test.mos
cmake/: FindGCOV.cmake  FindOMC.cmake  modelica.cmake
test/: DoublePendulum.mo  QuadTest.mo  Quadrotor.mo  test.mos
